Firefox Title Fix
The title font was too big to fit into firefox browser, reducing font
size

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ a:visited {
 }
 #slide1 h1 {
   margin-left: -0.2em;
-  font-size: 6em;
+  font-size: 5em;
   line-height: 0px;
   color: #fff;
   font-weight: 700;
